--- a/Do-An-java24/assets/css/styles.css
+++ b/Do-An-java24/assets/css/styles.css
@@ -23,20 +23,20 @@
 .plant-decorate{
     position: absolute;
     width: 100%;
-    height: 400px;
-    background-color: transparent;
+    height: 350px;
+    background-color: red;
     top: 300px;
 }
 
 .plant-1{
-    width: 110px;
+    width: 107px;
     margin-top: 240px;
 }
 
 .plant-2{
-    width: 150px;
-    margin-left: 1433px;
-    margin-top: 47px;
+    width: 148px;
+    margin-left: 1438px;
+    margin-bottom: 53px;
 }
 
 .header{
@@ -138,4 +138,31 @@ hr{
     font-size: 14.3px;
     font-weight: 400;
     color: var(--Dark, #000);
+}
+
+.collections{
+    width: 1091px;
+    height: 500px;
+    background-color: green;
+    position: absolute;
+    top: 200px;
+}
+
+.collections-content{
+    width: 610px;
+    height: 327px;
+    background-color: aqua;
+    margin-top: 63px;
+}
+
+/* .header-content{
+    width: 320px;
+    height: 50px;
+    background-color: red;
+} */
+
+.header-content{
+    font-family: 'Roboto', sans-serif;
+    font-size: 64.5px;
+    margin-top: -11px;
 }
