--- a/Do-An-java24/assets/css/styles.css
+++ b/Do-An-java24/assets/css/styles.css
@@ -14,8 +14,7 @@
 
 .container{
     width: 1175px;
-    height: 753px;
-    background-color: blue;
+    height: auto;
     margin: auto;
     position: relative;
 }
@@ -24,7 +23,6 @@
     position: absolute;
     width: 100%;
     height: 350px;
-    background-color: red;
     top: 300px;
     display: flex;
     justify-content: space-between;
@@ -36,14 +34,14 @@
 }
 
 .plant-2{
-    width: 148px;
+    width: 150px;
     margin-bottom: 100px;
+    margin-top: 47px;
 }
 
 .header{
     width: 100%;
     height: 113px;
-    background-color: aqua;
     position: absolute;
     top: 31px;
 }
@@ -51,7 +49,6 @@
 .header-top{
     width: 100%;
     height: 49px;
-    background-color: rgb(255, 255, 255);
     display: flex;
 }
 
@@ -70,7 +67,7 @@
     height: 21px;
     left: 522px;
     top: 1px;
-    color: #000000;
+    color: black;
 }
 
 .top-main .container .header .header-top .logo .left{
@@ -79,7 +76,7 @@
     height: 14px;
     left: 485px;
     top: 5px;
-    color: #000000;
+    color: black;
 }
 
 .top-main .container .header .header-top .logo .right{
@@ -88,7 +85,7 @@
     height: 14px;
     left: 617px;
     top: 5px;
-    color: #000000;
+    color: black;
 }
 
 i{
@@ -138,26 +135,109 @@ hr{
     font-family: 'Open Sans', sans-serif;
     font-size: 14.3px;
     font-weight: 400;
-    color: var(--Dark, #000);
+    color: black
+}
+
+.header-bot ul li:hover a{
+    color: orangered;
 }
 
 .collections{
     width: 1091px;
     height: 500px;
-    background-color: green;
     position: absolute;
     top: 200px;
+    display: flex;
+    justify-content: space-between;
 }
 
 .collections-content{
     width: 610px;
     height: 337px;
-    background-color: aqua;
     margin-top: 53px;
+    color: var(--Dark, #000);
 }
 
 .header-content{
     font-family: 'Roboto', sans-serif;
-    font-size: 64.5px;
+    font-size: 66px;
     margin-top: -1px;
+    font-weight: 300;
+}
+
+.paragraph{
+    width: 100%;
+    height: 100px;
+    margin-top: 28px;
+    font-size: 26.2px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    line-height: 55px;
+    margin-left: 5px;
+    color: var(--Dark, #000);
+}
+
+.shop-now{
+    width: 32.5%;
+    height: 64px;
+    background: var(--Black, #1E2832);
+    margin-left: 4px;
+    margin-top: 66px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 14px;
+}
+
+.shop-now i{
+    color: var(--White, #FFF);
+    font-size: 20px;
+}
+
+.shop-now p{
+    color: var(--White, #FFF);
+    font-size: 26px;
+    font-family: 'Roboto', sans-serif;
+}
+
+.border{
+    background-color: transparent;
+    width: 376px;
+    height: 483px;
+    margin-top: 17px;
+    border-radius: 142px 0;
+    position: relative;
+    border: 2px solid var(--Dark-25, rgba(0, 0, 0, 0.25));
+}
+
+.border img{
+    width: 376px;
+    height: 483px;
+    border-radius: 142px 0;
+    position: absolute;
+    bottom: 16px;
+    right: 14px;
+}
+
+.brands-and-products{
+    width: fixed 1920px;
+    height: auto;
+    background: red;
+}
+
+.brands{
+    width: 1175px;
+    height: 100px;
+    background-color: aqua;
+    margin: auto;
+    margin-top: 62px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.brands img{
+    width: 180px;
+    height: 62px;
+    gap: auto;
 }
