--- a/Do-An-java24/assets/css/styles.css
+++ b/Do-An-java24/assets/css/styles.css
@@ -221,14 +221,13 @@ hr{
 
 .brands-and-products{
     width: fixed 1920px;
-    height: auto;
+    height: 3000px;
     background: red;
 }
 
 .brands{
-    width: 1175px;
+    width: 100%;
     height: 100px;
-    background-color: aqua;
     margin: auto;
     margin-top: 62px;
     display: flex;
@@ -240,4 +239,127 @@ hr{
     width: 180px;
     height: 62px;
     gap: auto;
+}
+
+.hot-products{
+    width: 100%;
+    height: 578px;
+    margin-top: 60px;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+}
+
+.hot-products p{
+    z-index: 99999999999999;
+    position: absolute;
+    transform: rotate(270deg);
+    font-size: 30px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    left: -288px;
+    top: 272px
+}
+
+.hot1{
+    width: 575px;
+    height: 100%;
+}
+
+.hot1 img{
+    width: 100%;
+    height: 100%;
+}
+
+.hot-category{
+    width: 577px;
+    height: 100%;
+}
+
+.hot-category ul{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    list-style: none;
+    
+}
+
+.hot-category ul li img{
+    width: 279px;
+}
+
+.row2{
+    margin-top: 16px;
+}
+
+.grid-products{
+    width: 100%;
+    height: 1000px;
+    background-color: aqua;
+}
+
+.product-title{
+    width: 700px;
+    height: 70px;
+    background-color: blue;
+    margin: auto;
+    margin-top: 120px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    font-size: 30px;
+    position: relative;
+}
+
+.product-title h2{
+    position: absolute;
+    top: 4px;
+    left: 35px;
+}
+
+.top-grid-products{
+    width: 100%;
+    height: 29px;
+    margin-top: 18px;
+    position: relative;
+}
+
+.menu{
+    width: 333px;
+    height: 100%;
+    justify-content: space-between;
+    display: flex;
+    position: absolute;
+    left: 0;
+}
+
+.top-grid-products ul{
+    display: flex;
+    list-style: none;
+    align-items: center;
+}
+
+.top-grid-products ul li{
+    align-items: center;
+}
+
+.top-grid-products ul li a{
+    font-size: 15px;
+    align-items: center;
+    font-family: 'Open Sans', sans-serif;
+}
+
+.top-grid-products ul li h6{
+    font-size: 15px;
+    align-items: center;
+    font-family: 'Open Sans', sans-serif;
+}
+
+.top-grid-products div a{
+    position: absolute;
+    right: 0;
+}
+
+.top-grid-products div a img{
+    width: 83px;
+    height: 29px;
 }
