--- a/Do-An-java24/assets/css/styles.css
+++ b/Do-An-java24/assets/css/styles.css
@@ -221,8 +221,7 @@ hr{
 
 .brands-and-products{
     width: fixed 1920px;
-    height: 3000px;
-    background: red;
+    height: auto;
 }
 
 .brands{
@@ -294,14 +293,12 @@ hr{
 
 .grid-products{
     width: 100%;
-    height: 1000px;
-    background-color: aqua;
+    height: auto;
 }
 
 .product-title{
     width: 700px;
     height: 70px;
-    background-color: blue;
     margin: auto;
     margin-top: 120px;
     font-family: 'Roboto', sans-serif;
@@ -316,7 +313,7 @@ hr{
     left: 35px;
 }
 
-.top-grid-products{
+.top-menu-products{
     width: 100%;
     height: 29px;
     margin-top: 18px;
@@ -332,34 +329,225 @@ hr{
     left: 0;
 }
 
-.top-grid-products ul{
+.top-menu-products ul{
     display: flex;
     list-style: none;
     align-items: center;
 }
 
-.top-grid-products ul li{
+.top-menu-products ul li{
     align-items: center;
 }
 
-.top-grid-products ul li a{
+.top-menu-products ul li a{
+    font-size: 15px;
+    align-items: center;
+    font-family: 'Open Sans', sans-serif;
+    color: var(--Dark-50, rgba(0, 0, 0, 0.50));
+
+}
+
+.top-menu-products ul li:hover a{
+    color: orangered;
+}
+
+.top-menu-products ul li h6{
     font-size: 15px;
     align-items: center;
     font-family: 'Open Sans', sans-serif;
 }
 
-.top-grid-products ul li h6{
-    font-size: 15px;
-    align-items: center;
-    font-family: 'Open Sans', sans-serif;
-}
-
-.top-grid-products div a{
+.top-menu-products div a{
     position: absolute;
     right: 0;
 }
 
-.top-grid-products div a img{
+.top-menu-products div a:hover img{
+    color: orangered;
+}
+
+.top-menu-products div a .filter{
     width: 83px;
     height: 29px;
+    background: var(--Black, #1E2832);
+    display: flex;
+    align-items: center;
+    padding: 5px 15px;
+    gap: 4px;
+}
+
+.top-menu-products div a .filter .icon-filter{
+    width: 17px;
+    height: 18px;
+}
+
+.top-menu-products div a .filter .text-filter{
+    width: 33px;
+    height: 13px;
+}
+
+.top-menu-products div a:hover div{
+    background-color: orangered;
+}
+
+
+.products{
+    width: 100%;
+    height: 873px;
+    margin-top: 30px;
+}
+
+
+.products .row{
+    width: 100%;
+    height: 425px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: 0 -7px 0 0;
+}
+
+.products .row .column-4{
+    width: 100%/4;
+    height: 100%;
+}
+
+.products .row .column-4 a img{
+    width: 100%;
+    height: 427px;
+}
+
+.products .row2{
+    width: 100%;
+    height: 425px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: 22px -7px 0 0;
+}
+
+.products .row2 .column-4{
+    width: 100%/4;
+    height: 100%;
+}
+
+.products .row2 .column-4 a img{
+    width: 100%;
+    height: 427px;
+}
+
+.zara{
+    width: fixed 1920px;
+    height: 690px;
+    background-color: black;
+    margin-top: 125px;
+    position: relative;
+}
+
+.zara div img{
+    width: 1400px;
+    height: 100%;
+    position: absolute;
+    left: -8px;
+}
+
+.zara .zara1 img{
+    width: 600px;
+    height: 275px;
+    position: absolute;
+    left: 1097px;
+    top: 45px;
+}
+
+.zara .zara2 img{
+    width: 170px;
+    height: 72px;
+    position: absolute;
+    left: 954px;
+    top: 207px;
+}
+
+.center-main .text{
+    width: 455px;
+    height: 170px;
+    background-color: transparent;
+    position: absolute;
+    left: 954px;
+    top: 324px;
+}
+
+.zara .text p{
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 23.2px;
+    line-height: 44px;
+    color: #FFF;
+}
+
+.center-main .zara div a .see-collection{
+    background: var(--White, #FFF);
+    width: 210px;
+    height: 64px;
+    position: absolute;
+    left: 955px;
+    top: 544px;
+}
+
+.center-main .zara div a .see-collection img{
+    width: 163px;
+    height: 20px;
+    margin-left: 31px;
+    margin-top: 22px;
+}
+
+.center-main .zara div a:hover .see-collection{
+    background-color: orangered;
+}
+
+.slide{
+    width: fixed 1920px;
+    height: 2000px;
+    background-color: aqua;
+}
+
+.slide .container{
+    background-color: white;
+    width: 1175px;
+    height: 1000px;
+}
+
+.slide .container .best-sellers{
+    width: 250px;
+    height: 62px;
+    margin-top: 130px;
+    margin: auto;
+    margin-top: 130px;
+    position: relative;
+}
+
+.best-sellers h2{
+    position: absolute;
+    top: -4px;
+    left: 7px;
+    font-size: 44.4px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+}
+
+.slide .container .top-menu-products div a .show-all{
+    width: 83px;
+    height: 29px;
+    background: var(--Black, #1E2832);
+    align-items: center;
+}
+
+.slide .container .top-menu-products div a .show-all img{
+    width: 83px;
+    height: 23px;
+    padding: 5px 15px;
+    margin-top: 3px;
+}
+
+.slide .container .top-menu-products div a:hover .show-all{
+    background-color: orangered;
 }
