--- a/Do-An-java24/assets/css/styles.css
+++ b/Do-An-java24/assets/css/styles.css
@@ -117,8 +117,7 @@ span{
     margin-left: 24px;
     margin-top: 1px;
 }
-
-hr{
+.headder hr{
     color: #E3E3E3;
     height: 1px;
 }
@@ -257,7 +256,7 @@ hr{
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
     left: -288px;
-    top: 272px
+    top: 272px;
 }
 
 .hot1{
@@ -506,14 +505,14 @@ hr{
 
 .slide{
     width: fixed 1920px;
-    height: 2000px;
-    background-color: aqua;
+    height: 692px;
+    background-color: green;
 }
 
 .slide .container{
     background-color: white;
     width: 1175px;
-    height: 1000px;
+    height: 692px;
 }
 
 .slide .container .best-sellers{
@@ -578,4 +577,105 @@ hr{
     z-index: 999;
     top: 156px;
     left: 1124px;
+}
+
+.follow{
+    width: fixed 1920px;
+    height: 670px;
+    background: var(--Black-5, rgba(30, 40, 50, 0.05));
+}
+
+.follow .container{
+    width: 1175px;
+    height: inherit;
+}
+
+.follow-title-1{
+    width: fit-content;
+    height: auto;
+    padding-top: 88px;
+    margin: auto;
+}
+
+.follow-title-1 h2{
+    font-size: 44.4px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+}
+
+.ins{
+    padding-top: 52px;
+}
+
+.ins ul{
+    display: flex;
+    list-style: none;
+    justify-content: space-between;
+}
+
+.ins ul li a img{
+    width: 178px;
+    height: 178px;
+}
+
+.follow-title-2{
+    width: fit-content;
+    height: auto;
+    padding-top: 59px;
+    margin: auto;
+}
+
+.follow-title-2 h2{
+    font-size: 44.4px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+}
+
+.email{
+    display: flex;
+}
+
+.input{ 
+    width: 573px;
+    height: 40px;
+    margin-top: 50px;
+    margin-left: 250px;
+}
+
+.email .input input{
+    width: 100%;
+    height: 40px;
+    background-color: transparent;
+    border: none;
+}
+
+.email .input hr{
+    background: #000;
+    height: 3px;
+}
+
+.submit{ 
+    width: 80px ;
+    height: 40px;
+    margin-top: 73px;
+    margin-left: 22px;
+    position: relative;
+}
+
+.submit a p{
+    position: absolute;
+    margin: auto;
+    font-weight: 400;
+    font-size: 14px;
+    font-family: 'Open Sans', sans-serif;
+    top: -8px;
+    left: 14px;
+}
+
+.submit a hr{
+    position: absolute;
+    width: 80px;
+    height: 2px;
+    background: #1E2832;
+    top: 18px;
 }
