--- a/Do-An-java24/assets/css/styles.css
+++ b/Do-An-java24/assets/css/styles.css
@@ -716,20 +716,17 @@ a:hover .shop-now{
 .footer-main{
     width: fixed 1920px;
     height: 440px;
-    background-color: aqua;
 }
 
 .footer-main .container{
     width: 1175px;
     height: 89.5%;
-    background-color: red;
     position: relative;
 }
 
 .footer-left{
     width: 355px;
     height: 185px;
-    background-color: white;
     position: absolute;
     top: 125px;
     display: inline-flex;
@@ -782,10 +779,102 @@ a:hover .shop-now{
 
 .social{
     position: absolute;
-    top: 160px;
-    justify-content: space-between;
+    top: 163px;
+    left: 5px;
+    display: flex;
+    gap: 39px;
 }
 
-.social img{
-    width: 22px;
+.footer-menu-1{
+    width: 180px;
+    height: 190px;
+    position: absolute;
+    top: 125px;
+    left: 399px;
+    display: flex;
+    flex-direction: column;
+    gap: 22px;
+}
+
+.footer-menu-2{
+    width: 180px;
+    height: 190px;
+    position: absolute;
+    top: 125px;
+    left: 699px;
+    display: flex;
+    flex-direction: column;
+    gap: 22px;
+}
+
+.footer-menu-3{
+    width: 177px;
+    height: 190px;
+    position: absolute;
+    top: 125px;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 22px;
+}
+
+.footer-main .container div h6{
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 600;
+    font-size: 14px;
+}
+
+.footer-main .container div ul{
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
+.footer-main .container div ul li{
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
+    font-size: 12px;
+    color: var(--Black, #1E2832);
+}
+
+.footer-bot{
+    width: 100%;
+    height: 45px;
+    background: var(--Black, #1E2832);
+}
+
+.footer-bot .container{
+    width: 1175px;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.footer-bot-left p{
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
+    font-size: 14.3px;
+    color: var(--White, #FFF);
+}
+
+.footer-bot-center img{
+    width: 253px;
+    margin-top: 4px;
+}
+
+.footer-bot-right{
+    width: 134px;
+    height: 35px;
+    background-color: transparent;
+}
+
+.footer-bot-right img{
+    width: 134px;
+    margin-top: 4px;
+}
+
+.footer-bot .container .footer-bot-right:hover div{
+    background-color: orangered;
 }
