--- a/Do-An-java24/assets/css/styles.css
+++ b/Do-An-java24/assets/css/styles.css
@@ -98,7 +98,7 @@ a{
 }
 
 a:hover{
-    color: orangered;
+    color: #FF6F61;
 }
 
 .account{
@@ -138,7 +138,7 @@ span{
 }
 
 .header-bot ul li:hover a{
-    color: orangered;
+    color: #FF6F61;
 }
 
 .collections{
@@ -200,7 +200,7 @@ span{
 }
 
 a:hover .shop-now{
-    background-color: orangered;
+    background-color: #FF6F61;
 }
 
 .border{
@@ -266,6 +266,7 @@ a:hover .shop-now{
 .hot1{
     width: 575px;
     height: 100%;
+    position: relative;
 }
 
 .hot1 img{
@@ -351,7 +352,7 @@ a:hover .shop-now{
 }
 
 .top-menu-products ul li:hover a{
-    color: orangered;
+    color: #FF6F61;
 }
 
 .top-menu-products ul li h6{
@@ -366,7 +367,7 @@ a:hover .shop-now{
 }
 
 .top-menu-products div a:hover img{
-    color: orangered;
+    color: #FF6F61;
 }
 
 .top-menu-products div a .filter{
@@ -390,7 +391,7 @@ a:hover .shop-now{
 }
 
 .top-menu-products div a:hover div{
-    background-color: orangered;
+    background-color: #FF6F61;
 }
 
 
@@ -504,7 +505,7 @@ a:hover .shop-now{
 }
 
 .center-main .zara div a:hover .see-collection{
-    background-color: orangered;
+    background-color: #FF6F61;
 }
 
 .slide{
@@ -561,7 +562,7 @@ a:hover .shop-now{
 }
 
 .slide .container .top-menu-products div a:hover .show-all{
-    background-color: orangered;
+    background-color: #FF6F61;
 }
 
 .slide-main{
@@ -876,5 +877,102 @@ a:hover .shop-now{
 }
 
 .footer-bot .container .footer-bot-right:hover div{
-    background-color: orangered;
+    background-color: #FF6F61;
+}
+
+.products-hover{
+    width: 100%;
+    height: 48px;
+    background: var(--Black, #1E2832);
+    position: absolute;
+    top: 530px;
+    display: none;
+}
+
+.products-hover div{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 15px;
+    padding-left: 7px;
+    padding-right: 11px;
+}
+
+.products-hover div span{
+    color: #FFF;
+    font-size: 14.4px;
+    font-family: 'Open Sans', sans-serif;
+}
+
+.hot-category .row1 li .products-hover{
+    width: 278px;
+    height: 48px;
+    background: var(--Black, #1E2832);
+    position: absolute;
+    top: 230px;
+}
+
+.hot-category ul li .products-hover div{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 15px;
+    padding-left: 7px;
+    padding-right: 13px;
+}
+
+.hot-category .row2 li .products-hover{
+    width: 278px;
+    height: 48px;
+    background: var(--Black, #1E2832);
+    position: absolute;
+    top: 530px;
+}
+
+.hot-products .hot1:hover .products-hover{
+    display: block;
+}
+
+.hot-products .hot-category ul li:hover .products-hover{
+    display: block;
+}
+
+.products .row .column-4 a div{
+    position: relative;
+    width: 100%;
+    height: 120px;
+    background-color: red;
+    margin-top: -124px;
+}
+
+.products .row .column-4 a div .shop-hover{
+    width: 100%;
+    height: 49px;
+    background: var(--Black, #1E2832);
+    position: relative;
+}
+
+.products .row .column-4 a div .shop-hover .fa-regular{
+    font-size: 16px;
+    color: white;
+    position: absolute;
+    top: 16px;
+    left: 15px;
+}
+
+.products .row .column-4 a div .shop-hover .fa-solid{
+    font-size: 16px;
+    color: white;
+    position: absolute;
+    top: 16px;
+    left: 55px;
+}
+
+.products .row .column-4 a div .shop-hover div{
+    width: 45%;
+    height: 100%;
+    background-color: black;
+    position: absolute;
+    right: 0;
+    top: 124px;
 }
